Ekstra config i Dockerfile var ikke nødvendig siden den finnes allerede i navikt/java:8